# liquibase-clickhouse

./: .gitignore  PROMPT.md  SETUP.MD  SETUP_INFRA.MD  pyproject.toml  setup.py
sample/: SETUP_INFRA.MD  config.yaml  master-changelogs.yaml
sample/changelogs/edw/: 01_customer_summary_create_table.sql  changelogs.yaml  create_database.sql
sample/changelogs/mart/: 00_create_dataset.sql  changelogs.yaml  create_mart_table.sql
sample/changelogs/ods/: changelogs.yaml  create_database.sql  create_ods_table.sql
sample/changelogs/ods/line/: changelogs.yaml  create_user_activity_table.sql
sample/macros/: comment.jinja  macros.sql.jinja
sample/variables/: common.yaml  dev.yaml
src/liquibase_clickhouse/: changelog.py  changelog_parser.py  changelog_state_manager.py  cli.py  config.py  core.py  db.py
src/liquibase_clickhouse/util/: id_generator.py  templating.py
