[project]
name = "liquibase-clickhouse"
version = "0.1.0" # Start with 0.1.0 and increment as you develop your Python project
description = "A Python-based alternative or extension for Liquibase to support ClickHouse." # More descriptive for a Python project
readme = "README.md" # Path to your project's README file
requires-python = ">=3.8" # Specify the minimum Python version required
license = { text = "MIT License" } # Or specify a file like { file = "LICENSE" }
authors = [
  { name = "Dzung Vu", email = "vudung94nb@gmail.com" }, # Removed brackets as these appear to be your actual details
]
keywords = ["python", "liquibase", "clickhouse", "database-migration", "schema-management"] # Refined keywords for a Python-ClickHouse-Liquibase context
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8", # Be more specific if you want
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", # Common starting status for new projects
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click",
    "pyyaml",
    "jinja2",
    "clickhouse-driver",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
liquibase-clickhouse = "liquibase_clickhouse.cli:main"

# Your Ruff configuration (as provided)
[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py38'] # Match your requires-python version

[tool.isort]
profile = "black" # Use black's profile for compatibility
line_length = 88

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=liquibase_clickhouse --cov-report=xml --cov-report=html --no-cov-on-fail" # Replace 'liquibase_clickhouse' with your actual package name
testpaths = ["tests"]